# winuxsh

./: .gitignore  .winshrc.toml  Cargo.toml  LICENSE  README-zh.md  README.md  build.rs
.github/workflows/: ci.yml  release.yml
DOCS/: architecture.md  getting-started.md  nushell-reference-audit.md  rubash-pr-windows-path.md  winuxsh-native-zsh-plugin-pack-plan.md  winuxsh-next-development-plan.md  winuxsh-positioning-and-feature-map.md  winuxsh-roadmap.md  winuxsh-v2.2-reference-plan.md  winuxsh-v3-plan.md  zsh-compatibility-interface-audit.md  zsh-compatibility-plan.md  zsh-migration-guide.md  zsh-reference-audit.md
assets/winuxcmd/: activate-winuxcmd.sh
crates/winsh-ast/src/: expr.rs  lib.rs  redir.rs  stmt.rs  word.rs
crates/winsh-core/src/: arithmetic.rs  conditional.rs  config.rs  error.rs  expansion.rs  glob.rs  heredoc.rs  lib.rs
crates/winsh-lexer/src/: lexer.rs  lib.rs  quote.rs  token.rs
crates/winsh-parser/src/: parser.rs
crates/winuxsh-runtime/: Cargo.toml
crates/winuxsh-runtime/completions/defaults/: cat.toml  chmod.toml  cp.toml  find.toml  git.toml  grep.toml  ls.toml  mkdir.toml  mv.toml  rm.toml  touch.toml
crates/winuxsh-runtime/src/: autosuggest.rs  config.rs  ctrl_c.rs  git_status.rs  lib.rs  prompt.rs  prompt_segments.rs  repl.rs  setup_wizard.rs  shell.rs  syntax_highlighting.rs  terminal.rs  theme.rs  winuxcmd.rs
crates/winuxsh-runtime/src/completion/: bash_import.rs  command.rs  completer.rs  external.rs  mod.rs  path.rs  runtime.rs  variables.rs
crates/winuxsh-runtime/src/zsh_compat/: mod.rs
crates/winuxsh-runtime/tests/: completion.rs  zsh_compat.rs
scripts/: package-release.ps1
src/: builtins.rs  command_router.rs  executor.rs  main.rs  shell.rs  winuxcmd_ffi.rs
src/completion/: command.rs  completer.rs  external.rs  mod.rs  path.rs  variables.rs
tests/: compat.rs  completion_probe.rs  host_contract.rs  zsh_native_packs.rs  zsh_profile_plan.rs
tests/compat/fixtures/: alias.sh  and_or_status.expected  and_or_status.sh  bash_smoke.expected  bash_smoke.sh  command_substitution.expected  heredoc.sh  (+19 more)
(+1 files in other folders)
