[package]
name = "winuxsh"
version = "0.7.1"
edition = "2021"
rust-version = "1.70"
license = "GPL-3.0-or-later"
authors = ["unixwin team <arookieofc@gmail.com>"]
description = "A bash-compatible shell for Windows, built on rubash + winuxcmd"
readme = "README.md"
homepage = "https://github.com/unixwin/winuxsh"
repository = "https://github.com/unixwin/winuxsh"

[dependencies]
winuxsh-runtime = { path = "crates/winuxsh-runtime" }
rubash = { git = "https://github.com/unixwin/rubash.git", rev = "f451e16937437d49a2575fbc197345a498d68576" }
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"

