[package]
name = "winuxsh-runtime"
version = "0.7.2"
edition = "2021"
rust-version = "1.70"
license = "GPL-3.0-or-later"
description = "Runtime crate for winuxsh: rubash-backed shell REPL on Windows"

[dependencies]
rubash = { git = "https://github.com/unixwin/rubash.git", rev = "f451e16937437d49a2575fbc197345a498d68576" }
reedline = "0.33"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
colored = "2.1"
log = "0.4"
env_logger = "0.10"
nu-ansi-term = "0.50"
globset = "0.4"
glob = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Console"] }

[dev-dependencies]
tempfile = "3"

